--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.5.1",
     "firebase": "^10.7.1",
+    "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vuefire": "^3.1.22"
   },
